@@ -123,12 +123,6 @@ specifier|final
 name|Fields
 name|fields
 decl_stmt|;
-DECL|field|liveDocs
-specifier|private
-specifier|final
-name|Bits
-name|liveDocs
-decl_stmt|;
 DECL|field|merging
 specifier|private
 specifier|final
@@ -207,15 +201,6 @@ operator|=
 name|MultiFields
 operator|.
 name|getFields
-argument_list|(
-name|in
-argument_list|)
-expr_stmt|;
-name|liveDocs
-operator|=
-name|MultiFields
-operator|.
-name|getLiveDocs
 argument_list|(
 name|in
 argument_list|)
@@ -1067,7 +1052,12 @@ name|ensureOpen
 argument_list|()
 expr_stmt|;
 return|return
-name|liveDocs
+name|MultiFields
+operator|.
+name|getLiveDocs
+argument_list|(
+name|in
+argument_list|)
 return|;
 block|}
 annotation|@
